하단 페이지 작업 완료

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-direction: column;
       width: 100vw;
       height: 100vh;
       background-color: black;
@@ -48,7 +49,8 @@
       justify-content: center;
     }
     #first-container > div:nth-child(2) > h2 {
-      margin-top: 15px;
+      margin-top: 18px;
+      font-size: 32px;
     }
 
     #first-container > div:nth-child(2) > p {
@@ -63,6 +65,38 @@
       font-size: 48px;
       color: #8D8D8D;
       font-style: oblique;
+    }
+    #second-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #D9D9D9;
+      width: 1600px;
+      height: 430px;
+      margin-top: 29px;
+    }
+    #second-container > div:nth-child(1) > p {
+      font-size: 12px;
+      width: 467px;
+      height: 353px;
+      margin-right: 30px;
+    }
+    #second-container > div:nth-child(2) {
+      padding-right: 20px;
+    }
+    #second-container > div:nth-child(2) > h2 {
+      font-size: 32px;
+      margin-bottom: 23px;
+    } 
+    #second-container > div:nth-child(2) > p {
+      font-size: 12px;
+      width: 709px;
+      height: 286px;
+    }
+    #second-container > div:nth-child(3) > p {
+      font-size: 12px;
+      width: 303px;
+      height: 387px;
     }
   </style>
 </head>
@@ -81,7 +115,18 @@
       </div>
     </div>
     <!-- 2번 컨테이너 -->
-    <div></div>
+    <div id="second-container">
+      <div>
+        <p>Lorem ipsum dolor sit amet consectetur. Odio quisque et ac egestas aliquet lectus sagittis tortor pellentesque. Fames urna porttitor egestas ornare non pharetra vulputate imperdiet. Massa vulputate ultrices mauris ut amet sit et netus. Non enim aliquam placerat mattis id in mattis. Elementum mauris vestibulum ullamcorper orci penatibus laoreet risus diam. Etiam neque ut est posuere leo tincidunt ridiculus vitae sagittis. Egestas sed lectus tempus purus egestas. Elit maecenas turpis justo feugiat sagittis enim cras lobortis. Imperdiet turpis pellentesque posuere suspendisse. Et risus scelerisque id nulla. Nulla faucibus ut ultricies velit sed maecenas. A mattis neque erat egestas porttitor risus sed. Adipiscing nibh et dolor proin lorem tortor malesuada massa. Velit libero ac proin in orci nibh. Viverra ullamcorper massa nisi urna dignissim netus sed. Non sed ornare semper eu faucibus et odio fames tincidunt. Aenean neque aenean tortor interdum dignissim. Aliquet ornare nulla porttitor libero pretium morbi sagittis scelerisque. Elit arcu diam urna consectetur. Cursus augue volutpat habitasse sed neque vitae id. A amet arcu dignissim ut non gravida ut. Laoreet rhoncus leo odio donec.Auctor vitae porttitor suspendisse lobortis eleifend tristique diam. Malesuada arcu rutrum condimentum commodo vitae donec. Pretium malesuada blandit integer nunc feugiat ligula. Duis at in id urna. Massa in neque montes parturient urna. Id ligula quam ipsum nulla. Velit purus suspendisse arcu scelerisque tellus risus. Sed id lacus sit turpis mi adipiscing. Enim eget nec arcu massa adipiscing elit rhoncus. Quis congue senectus porttitor dui nisl. Ac luctus quam quam lorem. Nunc aliquam ornare dictum nullam vitae dui. Dictum commodo habitant augue gravida consequat quis proin mauris nec. </p>
+      </div>
+      <div>
+        <h2>HTML Training 3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur. Odio quisque et ac egestas aliquet lectus sagittis tortor pellentesque. Fames urna porttitor egestas ornare non pharetra vulputate imperdiet. Massa vulputate ultrices mauris ut amet sit et netus. Non enim aliquam placerat mattis id in mattis. Elementum mauris vestibulum ullamcorper orci penatibus laoreet risus diam. Etiam neque ut est posuere leo tincidunt ridiculus vitae sagittis. Egestas sed lectus tempus purus egestas. Elit maecenas turpis justo feugiat sagittis enim cras lobortis. Imperdiet turpis pellentesque posuere suspendisse. Et risus scelerisque id nulla. Nulla faucibus ut ultricies velit sed maecenas. A mattis neque erat egestas porttitor risus sed. Adipiscing nibh et dolor proin lorem tortor malesuada massa. Velit libero ac proin in orci nibh. Viverra ullamcorper massa nisi urna dignissim netus sed. Non sed ornare semper eu faucibus et odio fames tincidunt. Aenean neque aenean tortor interdum dignissim. Aliquet ornare nulla porttitor libero pretium morbi sagittis scelerisque. Elit arcu diam urna consectetur. Cursus augue volutpat habitasse sed neque vitae id. A amet arcu dignissim ut non gravida ut. Laoreet rhoncus leo odio donec.Auctor vitae porttitor suspendisse lobortis eleifend tristique diam. Malesuada arcu rutrum condimentum commodo vitae donec. Pretium malesuada blandit integer nunc feugiat ligula. Duis at in id urna. Massa in neque montes parturient urna. Id ligula quam ipsum nulla. Velit purus suspendisse arcu scelerisque tellus risus. Sed id lacus sit turpis mi adipiscing. Enim eget nec arcu massa adipiscing elit rhoncus. Quis congue senectus porttitor dui nisl. Ac luctus quam quam lorem. Nunc aliquam ornare dictum nullam vitae dui. Dictum commodo habitant augue gravida consequat quis proin mauris nec. Amet senectus ac sagittis volutpat quisque nec amet. Mi placerat lectus purus neque sit cursus proin. Natoque quam justo sem neque massa integer.</p>
+      </div>
+      <div>
+        <p>Lorem ipsum dolor sit amet consectetur. Odio quisque et ac egestas aliquet lectus sagittis tortor pellentesque. Fames urna porttitor egestas ornare non pharetra vulputate imperdiet. Massa vulputate ultrices mauris ut amet sit et netus. Non enim aliquam placerat mattis id in mattis. Elementum mauris vestibulum ullamcorper orci penatibus laoreet risus diam. Etiam neque ut est posuere leo tincidunt ridiculus vitae sagittis. Egestas sed lectus tempus purus egestas. Elit maecenas turpis justo feugiat sagittis enim cras lobortis. Imperdiet turpis pellentesque posuere suspendisse. Et risus scelerisque id nulla. Nulla faucibus ut ultricies velit sed maecenas. A mattis neque erat egestas porttitor risus sed. Adipiscing nibh et dolor proin lorem tortor malesuada massa. Velit libero ac proin in orci nibh. Viverra ullamcorper massa nisi urna dignissim netus sed. Non sed ornare semper eu faucibus et odio fames tincidunt. Aenean neque aenean tortor interdum dignissim. Aliquet ornare nulla porttitor libero pretium morbi sagittis scelerisque. Elit arcu diam urna consectetur. Cursus augue volutpat habitasse sed neque vitae id. A amet arcu dignissim ut non gravida ut. Laoreet rhoncus leo odio </p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
