--- a/index.html
+++ b/index.html
@@ -4,101 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
-    #root {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      width: 100vw;
-      height: 100vh;
-      background-color: black;
-    }
-    #first-container {
-      display: flex;
-      background-color: #D9D9D9;
-      width: 1600px;
-      height: 430px;
-    }
-    #first-container > div:nth-child(1) {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 465px;
-      height: 380px;
-      background-color: #fff;
-      margin-left: 33px;
-      margin-top: 30px;
-    }
-    #first-container > div:nth-child(1) > p {
-      width: 434px;
-      height: 348px;
-      font-size: 16px;
-      font-weight: 400;
-      text-align: left;
-      margin-bottom: 15px;
-    }
-    #first-container > div:nth-child(2) {
-      margin-left: 31px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-    #first-container > div:nth-child(2) > h2 {
-      margin-top: 18px;
-      font-size: 32px;
-    }
-
-    #first-container > div:nth-child(2) > p {
-      width: 1042px;
-      height: 228px;
-      font-size: 12px;
-      font-weight: 400;
-      padding-top: 19px;
-    }
-    #first-container > div:nth-child(2) > h1 {
-      margin-bottom: 30px;
-      font-size: 48px;
-      color: #8D8D8D;
-      font-style: oblique;
-    }
-    #second-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #D9D9D9;
-      width: 1600px;
-      height: 430px;
-      margin-top: 29px;
-    }
-    #second-container > div:nth-child(1) > p {
-      font-size: 12px;
-      width: 467px;
-      height: 353px;
-      margin-right: 30px;
-    }
-    #second-container > div:nth-child(2) {
-      padding-right: 20px;
-    }
-    #second-container > div:nth-child(2) > h2 {
-      font-size: 32px;
-      margin-bottom: 23px;
-    } 
-    #second-container > div:nth-child(2) > p {
-      font-size: 12px;
-      width: 709px;
-      height: 286px;
-    }
-    #second-container > div:nth-child(3) > p {
-      font-size: 12px;
-      width: 303px;
-      height: 387px;
-    }
-  </style>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div id="root">
